# sldf

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/examples_Psi4/01_Psi4_Water_DFT_PBE/: gen_sldf_psi4.py
examples/examples_Psi4/01_Water_DFT_PBE_SLDF/: gen_sldf_psi4.py
examples/examples_Psi4/01_Water_PBE_SLDF/: gen_sldf_psi4.py  ref_sldf.csv
examples/examples_Psi4/02_Water_HF_SLDF/: gen_sldf_psi4.py  ref_sldf.csv
examples/examples_Psi4/03_Psi4_Water_DFT_LDA/: gen_sldf_psi4.py
examples/examples_Psi4/03_Water_DFT_LDA_SLDF/: gen_sldf_psi4.py
examples/examples_Psi4/03_Water_LDA_SLDF/: gen_sldf_psi4.py  ref_sldf.csv
examples/examples_Psi4/04_Psi4_Water_Initial_Guess_SAD/: gen_sldf_psi4.py
examples/examples_Psi4/04_Water_Initial_Guess_SAD_SLDF/: gen_sldf_psi4.py  ref_sldf.csv
examples/examples_Psi4/05_CO2_DFT_PBE_SLDF/: gen_sldf_psi4.py
examples/examples_Psi4/06_Psi4_Benzene_DFT_PBE/: gen_sldf_psi4.py
examples/examples_PySCF/01_PySCF_Water_PBE/: gen_sldf_pyscf.py
examples/examples_PySCF/01_Water_PBE_SLDF/: gen_sldf_pyscf.py  ref_sldf.csv
examples/examples_PySCF/02_Water_HF_SLDF/: gen_sldf_pyscf.py  ref_sldf.csv
examples/examples_PySCF/03_PySCF_Water_LDA/: gen_sldf_pyscf.py
examples/examples_PySCF/03_Water_LDA_SLDF/: gen_sldf_pyscf.py  ref_sldf.csv
examples/examples_PySCF/04_Water_Initial_Guess_Atom_SLDF/: gen_sldf_pyscf.py  ref_sldf.csv
examples/examples_PySCF/05_CO2_PBE_SLDF/: gen_sldf_pyscf.py
examples/examples_PySCF/06_H2_PBE_SLDF/: gen_sldf_pyscf.py
sldf/: __init__.py  core.py
